--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
     <div class="footer-right">
       <p class="mb-0">
         Support by
-        <a href="https://github.com/codericky" target="_blank" rel="noopener">codericky</a>
+        <a href="https://github.com/codericky" target="_blank" rel="noopener">Codericky</a>
       </p>
     </div>
 
